<resources>
    <string name="app_name">My Dictionary</string>
    <string name="btnOpenDictionary">Топ 5000</string>
    <string name="btnOpenNewWords">Добавить новое слово Топ 5000</string>
    <string name="btnCheck">Проверить</string>
    <string name="btnShowWord">Забыл слово</string>
    <string name="toastCorrectly">Верно</string>
    <string name="toastWrong">Неверно</string>
    <string name="toastRepeat">Осталось повторить</string>
    <string name="btnNextWord">Следущее слово</string>
    <string name="btnOpenTraining">Тренировка слов</string>
    <string name="btnOpenStudy">Изучаемые слова</string>
    <string name="toastTrainingEnd">Тренировка закончена</string>
    <string name="buttAddYandex">Найти</string>
    <string name="etRussWord">Русский</string>
    <string name="etEngWord">Английский</string>
    <string name="btnOpenYandex">Добавить слово</string>
    <string name="tvTranslation">Перевод:</string>
    <string name="btnAddWordOnStudy">Добавить</string>
    <string name="toastAddWord">Слово Добавлено</string>
    <string name="ToastCheckForInsert">Такое слово уже есть</string>
    <string name="toast_word_has_already_added">Cлово уже добавлено</string>
    <string name="toast_delete_word">Слово удалено</string>
    <string name="PIXABAY_API_KEY">11905055-1766faa9de91d6e2edcd2e672</string>
    <string name="Yandex_API_KEY">trnsl.1.1.20180723T103924Z.4e5559e0a3b45ee4.800a777f9ceb4003f58fd2bc387d15bddeffd2fe</string>
    <string name="tv_q_set_image">Установить изображение ?</string>
    <string name="et_check_yourself">Проверь себя</string>
    <string name="listen_word">Прослушать слово</string>
</resources>
